--- a/fastlaneTravisCI/.travis.yml
+++ b/fastlaneTravisCI/.travis.yml
@@ -3,3 +3,6 @@ osx_image: xcode7.3 #2
 xcode_project: fastlaneTravisCI.xcodeproj #3
 xcode_scheme: fastlaneTravisCI #4
 xcode_sdk: iphonesimulator9.3 #5
+
+notifications:
+  slack: eshares:pLmZG3X5q8kDQGxhHACuSytn
