change build version to 9.2

--- a/fastlaneTravisCI.xcodeproj/xcshareddata/xcschemes/fastlaneTravisCI.xcscheme
+++ b/fastlaneTravisCI.xcodeproj/xcshareddata/xcschemes/fastlaneTravisCI.xcscheme
@@ -39,7 +39,7 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO">
+            skipped = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "FD754B921D3EA0920056BC35"
